--- a/day01/mobileWeatherApp/app/src/main/AndroidManifest.xml
+++ b/day01/mobileWeatherApp/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/baseline_wb_sunny_24"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MobileWeatherApp"
+        android:theme="@style/Theme.weatherApp_proj"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
