day03 all works as expected

--- a/day03/mobileWeatherApp/gradle/libs.versions.toml
+++ b/day03/mobileWeatherApp/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ playServicesLocation = "21.3.0"
 playServicesLocationVersion = "21.0.1"
 retrofitVersion = "2.11.0"
 toolsCore = "1.0.0-alpha10"
+uiTextAndroid = "1.7.8"
 
 [libraries]
 androidsvg = { module = "com.caverock:androidsvg", version.ref = "androidsvg" }
@@ -39,6 +40,7 @@ play-services-location = { group = "com.google.android.gms", name = "play-servic
 androidx-tools-core = { group = "androidx.privacysandbox.tools", name = "tools-core", version.ref = "toolsCore" }
 play-services-location-v2101 = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocationVersion" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofitVersion" }
+androidx-ui-text-android = { group = "androidx.compose.ui", name = "ui-text-android", version.ref = "uiTextAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
