updated hourly to start from current time, fixed sync for reversegeocoding and weather apis

--- a/day03/mobileWeatherApp/app/src/main/AndroidManifest.xml
+++ b/day03/mobileWeatherApp/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:roundIcon="@drawable/baseline_wb_sunny_24"
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileWeatherApp"
+        android:hardwareAccelerated="true"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
